add Idle Task, Measurement, and Misc. Docs
also improved interrupt documentation

--- a/docs/k3/k3.md
+++ b/docs/k3/k3.md
@@ -3,15 +3,38 @@
 In K3, we implemented the clock server, using the `AwaitEvent(int event)`
 kernel primitive.
 
+## Interrupt Handling
 
-## Interrupt handling and `AwaitEvent`
+Upon startup, the kernel's `initialize` method configures the VIC to trigger
+IRQs, and installs the new `_irq_handler` function as the ARM920T's interrupt
+handler.
 
-A new function `_irq_handler` (implemented in assembly), is called when an IRQ
-occurs, and acts similarly to `_swi_handler`: the task's context is saved, and
-execution is switched back to the kernel. This time, `handle_interrupt` is
-called in the kernel, which may move an event-blocked task back to the
-`ready_queue`. Then, `_activate_task` returns, and the kernel repeats the
-scheduling loop.
+`_irq_handler` is extremely similar to the `_swi_handler` function, with a few
+minor differences:
+
+- Instead of switching to supervisor mode to retrieve the user's return address,
+the handler switches to IRQ mode instead.
+- The IRQ handler omits any code related to reading the immediate value of the
+last executed user instruction.
+- The IRQ handler adjusts the user's return address by `-4`.
+
+When the `_irq_handler` is invoked, the task's context is saved, and execution
+is switched back to the kernel. `_irq_handler` proceeds to call the
+`handle_interrupt` method (implemented in C), which then trampolines execution
+to the kernel's `handle_interrupt` member method. The `handle_interrupt` method
+will then move any event-blocked tasks back to the `ready_queue` (see
+`AwaitEvent` documentation below). Once `handle_interrupt` completes, it returns
+back to the `_irq_handler`, which eventually yields execution back to the
+kernel's main scheduling loop.
+
+We've taken care to ensure that the layout of the user's stack is identical
+between the `_swi_handler` and the `_irq_handler`, which greatly simplifies the
+implementation of `_activate_task`. Our kernel doesn't have to perform any
+additional bookkeeping to determine how exactly a task returned to the kernel.
+
+> Note: between K2 and K3, we've reworked quite a bit of our context-switch plumbing! As such, The K1 documentation is now **outdated**, and is not reflective of our current implementation. For details on our reworked context switch, please refer to the context-switch presentation slides.
+
+## `AwaitEvent`
 
 The kernel contains an `event_queue`, which is an array of 64 optional `Tid`s.
 When a task wants to wait for an interrupt, it calls `AwaitEvent(int eventid)`,
@@ -22,17 +45,18 @@ the Tid is removes from `event_queue`, and the task is moved back to the
 `ready_queue`. The preempted task remains ready, and thus is put back on the
 `ready_queue` as well.
 
-Multiple tasks waiting on the same event is not supported, simply because the
-clock and UART servers do not require such functionality.
+Multiple tasks waiting on the same event is not currently supported, simply
+because the clock (and eventually, UART servers) will not require such
+functionality.
 
-## Clock server
+## Clock Server
 
 The clock server is implemented using one timer and two tasks: the server and
-notifier. Timer2 is set to fire interrupts every 10 milliseconds, to correspond
+notifier. Timer 2 is set to fire interrupts every 10 milliseconds, to correspond
 to a kernel "tick". The clock server starts up the notifier, and then follows
 the usual server pattern: a `Receive()` loop that never blocks.
 
-The notifier runs a simple `AwaitEvent(5)` loop (interrupt 5 is for Timer2
+The notifier runs a simple `AwaitEvent(5)` loop (interrupt 5 is for Timer 2
 underflow), and then `Send`s to the clock server. The clock server tracks
 `current_time`, which is incremented every time the notifier sends a tick.
 `Time()` is implemented by simply replying with `current_time`. `Delay()` and
@@ -51,6 +75,73 @@ server and notifier. The notifier shuts down if the clock server replies with
 `shutdown=true` when the notifier sends a tick. Clean shutdown functionality is
 useful for tests, which are expected to terminate quickly.
 
-## Idle task and measurement
+### Idle Task Implementation
+
+For K3, we chose to implement the Idle Task as a simple busy loop. The Idle Task is spawned directly by the Kernel, and has the special priority of `-1`. Normal user tasks are not allowed to have negative priorities, and as such, the Idle Task is guaranteed to always have the lowest priority of any task on the system.
+
+### Idle Task Measurement
+
+To measure how long the idle task is running for, we've added some instrumentation to the kernel's main schedule-activate loop.
+
+Before calling `activate`, we check if the Tid that is about to be activated is the Idle Task Tid. If it is, then we read the value of Timer 3 (which is set to UINT32_MAX during kernel initialization) first. Once the task is preempted, we re-read the value of Timer 3, and calculate the time that the Idle Task was active for. We take this interval and add it to a running total value of idle time. The idle percentage of the system from boot-up is therefore given by `(total_idle_time / (UINT32_MAX - current_time))`
+
+### Future Improvements
+
+- We are well-aware that a busy-loop idle task is not the most optimal approach, and we plan to replace it with a proper "switch to low-power mode" implementation at some point in the future.
+- At the moment, we only display the idle percentage from kernel start, which provides an indication of _overall_ system performance, but makes it difficult to spot sudden spikes / dips in system idle time.
+    - As such, we plan to implement a _running_ idle percentage, which tracks system idle time within a fixed window. This should make it easier to see any sudden changes in system performance.
 
 
+## Misc. Additions
+
+Aside from the mandatory requirements documented above, we've also made some fairly substantial miscellaneous changes to our Kernel in between K2 and K3:
+
+### Switch to C++2a
+
+We've opted to move the project over from C++17 to C++2a, which is the latest version of C++ supported by the arm-none-eabi toolchain on the student CS servers. The primary reason for this was to enable first-class support for C++20s new [Designated Initializer Aggregate Initializer syntax](https://en.cppreference.com/w/cpp/language/aggregate_initialization), as opposed to relying on gcc's C++ language extension which enables using C's designated initializer syntax. Our kernel makes great use of tagged enumerations, which are significantly easier to initialize using designated initializer syntax.
+
+This has also allowed us to enable the `-pedantic` warning flag, which should make our kernel more standards conformant (though we have opted to enable VLA support, given how useful it can be in embedded contexts).
+
+### Pervasive use of `std::optional`
+
+In previous iterations of our kernel, we used a hodgepodge of sentinel values, "enabled/disabled" booleans, and "null states" to represent the absence of / unused data. Starting from K3, we've made the effort to rewrite much of our kernel to use C++17's new [`std::optional`](https://en.cppreference.com/w/cpp/utility/optional) type.
+
+`std::optional` enables adding an "out-of-band" null state to objects, and provides a single, unified approach to representing the absence of data. Moreover, by limiting ourselves to only using `std::optional`'s `value()` method, we are opting-in to runtime checks that ensure we do not accidentally use a null value (i.e: calling `value()` on `std::nullopt` results in a kernel panic and immediate abort).
+
+To illustrate how the use of `std::optional` has impacted our codebase, consider the following two examples:
+
+#### Intrusive Tid-based lists
+
+In K2, we would use a sentinel value of `-1` to represent a "null" link. While this worked, it required us to be very careful when working with those links to make sure that we didn't accidentally try to use the "null" Tid as an index into any sort of structure.
+
+In K3, we represent links as a `std::optional<Tid>`, which enables to compiler to enforce _at compile time_ that we don't use a "null" Tid to index into any structure. Instead, we are _forced_ to first check the state of the optional (via it's `has_value()` method), before extracting the contained value (via the `value()` method).
+
+#### Unused Tasks
+
+In K2, we had a "UNUSED" task state, which was set whenever a task descriptor wasn't being used. This resulted in lots of extraneous assertions and switch-statement cases to handle this special state, which affected the readability and maintainability of our code. Moreover, there were cases where we would forge to check if a task was in the "UNUSED" state, and access it's fields when we were not supposed to.
+
+In K3, instead of having a special "UNUSED" task state, we've opted to change the type of our tasks array from a `TaskDescriptor[]` to a `std::optional<TaskDescriptor>[]`, and have eliminated the special "UNUSED" task state entirely. Now, whenever we want to work with a task from the tasks array, the compiler enforces that we first check if the task is not a `std::nullopt` before using it. Moreover, since we don't have an "UNUSED" state, we were able to remove many of the checks and extraneous switch branches that accounted for it.
+
+### Tid Newtype
+
+Instead of using a raw `int` value for the Tid in the kernel, we've created a special type to represent Tids: the cleverly named `Tid` class.
+
+Newtypes are a fantastic way to leverage a language's type system to prevent silly coding mistakes, such as accidentally swapping the arguments to a method, or attempting to perform "invalid" operations on certain types (e.g: what would it mean to add two Tids together?). Moreover, it's now a lot easier to see when Tids are being created and used, improving readability and maintainability.
+
+### Integrating the `mpaland/printf` library
+
+While the provided `bwio` library came with it's own `bwprintf` method, we quickly opted to avoid using it, as it didn't support many of the formatting rules and specifiers supported by the standard library. Unfortunately, this meant that we had to rely on `snprintf` to write data into arbitrarily-sized, fixed-size buffers on the stack, passing the buffer to `bwputstr` upon completion. This approach worked, but came with a performance penalty (from having to write into a buffer, just to immediately flush it), and a limitation on output length (based on the size of the stack-allocated buffer).
+
+To work around these limitations, we asked Prof. Karsten if we could integrate the [`mpaland/printf`](https://github.com/mpaland/printf) library into our project. Much to our surprise, [he said yes](https://piazza.com/class/k4yiinhftu3b1?cid=74)!
+
+`mpaland/printf` is an implementation of `printf` and `sprintf` for embedded platforms, supporting all standard formatting rules and specifiers. It's a single `.c` file with an associated `.h` file, and has no dependencies (not even to the C standard library). Most importantly for us though, this library provides an incredibly useful method that the standard library _does not_ provide:
+
+```c
+int fctprintf(void (*out)(char character, void* arg), void* arg, const char* format, ...);
+```
+
+This is a `printf` method which takes a function pointer to a _custom_ output function!
+
+This is awesome, since it means we can define our own output function which uses `bwputc`, and plug it in to this library! Moreover, once we get our UART servers up and running, we'll be able to define a output function backed by the userland `Putc` method to create a non-blocking `Printf` function with nearly zero effort!
+
+The library is under `<src/include>/common/printf.<c/h>`, and includes all relevant licenses and attributions. We did make a few modifications to the library, which have been clearly noted and documented inline.
