k4.md: UART Server

--- a/docs/k4/k4.md
+++ b/docs/k4/k4.md
@@ -4,9 +4,81 @@
 
 <!-- TODO: james -->
 
-## UART Server(s)
+## UART Server
 
-<!-- TODO: james -->
+The UART server is implemented as a single server task for both UARTs, and one
+notifier task for each UART. The notifier tasks simply `AwaitEvent(<irq_no>)`
+in a loop, `Send()`ing the interrupt data to the UART server. The server
+follows the conventional pattern of a `Receive()` loop that never blocks. The
+exposed interface contains the required `Putc` and `Getc` functions, along with
+a few other helpful routines:
+
+```cpp
+namespace Uart {
+extern const char* SERVER_ID;
+void Server();
+int Getc(int tid, int channel);
+int Putc(int tid, int channel, char c);
+
+// Getn blocks until n bytes are received from the UART, writing the bytes to
+// buf.
+int Getn(int tid, int channel, size_t n, char* buf);
+
+// Putstr and Printf can atomically write up to 4096 bytes to the UART in a
+// single call.
+int Putstr(int tid, int channel, const char* msg);
+int Printf(int tid, int channel, const char* format, ...)
+    __attribute__((format(printf, 3, 4)));
+
+// Drain empties the RX FIFO for the given channel.
+void Drain(int tid, int channel);
+
+// Getline reads a line of input from the uart into `line`, treating the
+// backspace and enter keys appropriately.
+void Getline(int tid, int channel, char* line, size_t len);
+}  // namespace Uart
+ ```
+
+Notably, `Putstr` and `Printf` atomically write an entire string to the UART
+(up to a maximum length of 4096 bytes), and `Getn` blocks until `n` bytes are
+received from the UART. Each of the output routines are written in terms of
+`Putstr`, and similarily, each of the input routinges are written in terms of
+`Getn`.
+
+The UART server has two key pieces of state: output buffers (for TX) and
+blocked tasks (for RX). The output buffers are a 4096-byte ring buffer per
+UART.
+
+When handling a `Putstr`, data is written to the UART until the FIFO fills up,
+at which point further data is pushed onto the output ring buffer and the `tx`
+interrupt is enabled. Once the tx interrupt is received, data is pulled off the
+ring buffer and written to the UART's data register until either the buffer is
+emptied or the FIFO is filled (in which case `tx` interrupts will be enabled
+again). `Putstr` replies to the sender immediately, ensuring only that the
+string has been buffered, not flushed.
+
+`Getn` is handled by putting storing a "blocked task" per UART. When a task
+calls `Getn` (or `Getc`, which is just a special case of `Getn`), a blocked
+task entry is created for the UART, which contains a buffer to store bytes,
+along with a counter of how many bytes have been received and the task's TID.
+The UART server then reads bytes off the UART's RX FIFO until either the FIFO
+is empty (in which case the `rx` and `rx_timeout` interrupts are enabled) or
+the desired `n` bytes have been received (in which case a reply is sent and the
+"blocked task" is cleared).
+
+Only one reading task per UART is supported, as concurrent readers leads to
+confusing behaviour - should received bytes be sent to both tasks concurrently?
+In a round robin? Or in sequential order? The semantics of multi-reader is
+confusing, and likely unnecessary for any applications that will be built on
+the kernel. So "bocked tasks" are implemented as simple `std::optional`s per
+UART, and concurrent reads to the same UART will panic.
+
+`Drain` is a notable addition to the specification - it clears any bytes that
+may be sitting in the RX FIFO and any blocked task's buffer. This is useful
+when we know that certain bytes are expected to be received after a certain
+event. Calling `Drain` ensures that all received bytes must have been received
+after the `Drain` call, which is useful when doing request-response style calls
+over the UART.
 
 ## Re-Execute Kernel without resetting TS-72000
 
