k4.md: splitting kernel.cc

--- a/docs/k4/k4.md
+++ b/docs/k4/k4.md
@@ -114,12 +114,33 @@ if (/* there is nothing to schedule */) {
 
 ## Splitting `kernel.cc` into multiple files
 
-- no more kernel singleton class. using namespaces instead
-    <!-- TODO: james, pls elaborate on namespace structure -->
+The kernel is no longer written as a `class` with a single instance, but
+instead a collection of namespaces with a few static state variables. This has
+allowed us to finally split up the massive `kernel.cc` file by slices of
+functionality, instead of keeping everything in one class, fighting with
+unnecessary encapsulation.
 
-- kernel.cc only has init, shutdown, and run loop
-- irq_handler and swi_handler are in their own files
-- each syscall has it's own file
+The namespaces are as follows:
+- `kernel` defines the kernel's state (`tasks`, `current_task`, `ready_queue`,
+  `event_queue`) and the `run()` function that executes the main scheduling
+loop.
+- `kernel::driver` implements the functions required by `kernel::run()`
+  (`activate_task`, `schedule`, `initialize`, `shutdown`) along with the `swi`
+and `irq` handlers.
+- `kernel::handlers` implements the functions to handle each syscall (`Create`,
+  `MyTid`, `Send`, etc).
+- `kernel::perf` keeps the state to track our idle time measurment.
+- `kernel::helpers` contains functions used accross multiple namespaces.
+
+`kernel.h` defines the public interface of each namespace, but each namespace
+is implemented accross one or more separate files. Syscall handlers each get
+their own file (i.e. `src/kernel/handlers/send.cc`), as do the `irq` and `swi`
+handlers. Data structures such as `Tid` and `TaskDescriptor` are also
+separated.
+
+`kernel.cc` is now substantially smaller and more navigable: it just defines
+the global state variables, `kernel::run()` and the `kernel::driver` routines
+used by `kernel::run()`. Everything else is separate.
 
 ## FirstUserTask with Priority 0
 
