--- a/docs/k4/k4.md
+++ b/docs/k4/k4.md
@@ -1,3 +1,7 @@
+Please note that this document only describes a changelog for `K4` along with a
+description of our reimplementation of `A0`. For the full kernel documentation,
+please refer to `kernel.pdf`.
+
 # New in K4
 
 ## UART IRQs
@@ -139,6 +143,7 @@ As mentioned in our K3 docs, we knew full-well that our empty-looping idle task 
 As it turns out, this was surprisingly simple to implement:
 
 During kernel initialization, we enable the Halt/Standby magic addresses in the System Controller. This only requires two simple lines of code:
+
 - `*(volatile uint32_t*)(SYSCON_SWLOCK) = 0xaa;`
 - `*(volatile uint32_t*)(SYSCON_DEVICECFG) |= 1;`
 
@@ -167,6 +172,7 @@ functionality, instead of keeping everything in one class, fighting with
 unnecessary encapsulation.
 
 The namespaces are as follows:
+
 - `kernel` defines the kernel's state (`tasks`, `current_task`, `ready_queue`,
   `event_queue`) and the `run()` function that executes the main scheduling
 loop.
@@ -211,6 +217,7 @@ As part of our cleanup efforts, we've introduced two new kernel syscalls:
 In K3, we had a somewhat... unpolished approach to outputting idle time measurements. Namely, we would simply `bwprintf` the idle percentage each time the idle task was preempted.
 
 This approach had two serious issues:
+
 - It used busy-wait IO, which seriously hurt system performance.
 - It would output idle time diagnostics to the same place on screen, without any regard for the UI of the running application.
 
