--- a/docs/k4/k4.md
+++ b/docs/k4/k4.md
@@ -142,14 +142,14 @@ As mentioned in our K3 docs, we knew full-well that our empty-looping idle task 
 
 As it turns out, this was surprisingly simple to implement:
 
-During kernel initialization, we enable the Halt/Standby magic addresses in the System Controller. This only requires two simple lines of code:
+During kernel initialization, we enable the Halt/Standby magic addresses in the System Controller. This is done in two simple lines of code:
 
 - `*(volatile uint32_t*)(SYSCON_SWLOCK) = 0xaa;`
 - `*(volatile uint32_t*)(SYSCON_DEVICECFG) |= 1;`
 
 With this setup out of the way, the entire system can be put into the low power Halt mode by reading from the System Controller's Halt register (i.e: `*(volatile uint32_t*)(SYSCON_HALT);`).
 
-As it turns out, using the System Controller to halt the CPU has a very useful side effect: the CPU does _not_ need to have it's IRQs enabled for the System Controller to wake it up! This means that we can leave the CPU in the regular IRQ-disabled Kernel Mode before entering the Halt state, saving us from having to do any mode-switching assembly shenanigans. When an IRQ eventually arrives, the System Controller will simply "unhalt" the CPU, and it will resume executing instructions directly after the `SYSCON_HALT` read. Critically, the CPU does _not_ jump to the global IRQ handler, which would be quite dangerous, given that the IRQ handler is typically only entered when a user task is preempted.
+As it turns out, using the System Controller to halt the CPU has a very useful side effect: the CPU does _not_ need to have it's IRQs enabled for the System Controller to wake it up! This means that we can leave the CPU in the regular IRQ-disabled Kernel Mode before entering the Halt state, saving us from having to do any mode-switching assembly shenanigans. When an IRQ eventually arrives, the System Controller simply "unhalts" the CPU, which resumes executing whatever instructions come after the `SYSCON_HALT` read. Critically, the CPU does _not_ jump to the global IRQ handler, which would be quite dangerous, given that the IRQ handler is typically only entered when a user task is preempted.
 
 Thus, our entire "idle task" logic is as simple as:
 
