--- a/docs/k4/k4.md
+++ b/docs/k4/k4.md
@@ -110,7 +110,7 @@ string has been buffered, not flushed.
 `Getn` is handled by putting storing a "blocked task" per UART. When a task
 calls `Getn` (or `Getc`, which is just a special case of `Getn`), a blocked
 task entry is created for the UART, which contains a buffer to store bytes,
-along with a counter of how many bytes have been received and the task's TID.
+along with a counter of how many bytes have been received and the task's Tid.
 The UART server then reads bytes off the UART's RX FIFO until either the FIFO
 is empty (in which case the `rx` and `rx_timeout` interrupts are enabled) or
 the desired `n` bytes have been received (in which case a reply is sent and the
@@ -206,7 +206,7 @@ The Nameserver is quite a _special_ user task, as it's interface implicitly reli
 
 In previous iterations of our kernel, we would ensure that the Nameserver task had a Tid of 1 by having a implicit requirement that that FirstUserTask must spawn the Nameserver task _before_ spawning any other tasks.
 
-While this approach _worked_, it wasn't very robust, as we would often inadvertently spawn a task prior to the Nameserver, and spend a minute or two wondering why the Nameserver calls were failing. To avoid these sorts of mistakes, and to cut down on some boilerplate, we've opted to spawn the Nameserver _alongside_ the FirstUserTask as part of the kernel setup, thereby ensuring that the Nameserver task both exists, _and_ had the correct TID.
+While this approach _worked_, it wasn't very robust, as we would often inadvertently spawn a task prior to the Nameserver, and spend a minute or two wondering why the Nameserver calls were failing. To avoid these sorts of mistakes, and to cut down on some boilerplate, we've opted to spawn the Nameserver _alongside_ the FirstUserTask as part of the kernel setup, thereby ensuring that the Nameserver task both exists, _and_ had the correct Tid.
 
 ## New Syscalls
 
