add blurb about not having CTS working

--- a/docs/k4/k4.md
+++ b/docs/k4/k4.md
@@ -130,6 +130,12 @@ event. Calling `Drain` ensures that all received bytes must have been received
 after the `Drain` call, which is useful when doing request-response style calls
 over the UART.
 
+### A note about CTS
+
+Due to time constraints stemming from social and familial obligations during reading week, we were unable to get the CTS functionality on UART1 working correctly. We currently delay 250ms between Marklin commands.
+
+We will continue to work on implementing proper CTS functionality, making sure that it is working correctly by the next deliverable.
+
 ## Re-Execute Kernel without resetting TS-7200
 
 Part of our feedback for K3 was that our kernel could not be re-executed without first reseting the TS-7200. This was a silly oversight on our part, as while we had all the infrastructure in place to support this (i.e: a shutdown routine that disabled and asserted interrupts), we had neglected to clear the Timer2 interrupt when shutting down.
