plumb through a make loop command

--- a/docs/t1/t1.md
+++ b/docs/t1/t1.md
@@ -31,6 +31,7 @@ t1 commands:
   addtr <train>                   - register a train with the track
   route <train> <sensor> <offset> - route train to given sensor + offset
   tr <train> <speed>              - set a train to a certain speed
+  mkloop                          - reset track to have a loop
   q                               - quit
 
 debug commands:
