docs - start on measurement

--- a/docs/t1/t1.md
+++ b/docs/t1/t1.md
@@ -194,37 +194,59 @@ The majority of it's parsing logic has been ported over from past assignments (n
 
 # Train Measurement - Collection
 
-<!-- TODO: expand -->
+To perform our measurements, we created a new target executable called `measure`. While this executable does in-fact run on top of our operating system, we never spawn more than one task, and only ever invoke the "Exit" and "Shutdown" syscalls. All I/O is done via polling and busy-waiting, as using the UART servers for I/O would add additional overhead when reading / writing data, interfering with the precise timing measurements.
 
-- code is in the "measure" assignment (TODO: merge this into T1 branch)
-- doesn't use OS for anything - everything is busy-wait
-    - timing uses TIMER3 at 508khz (automatically set up by the kernel)
-- program will query user to enter train to test, and which speed to start testing from (needed to compensate for train getting stuck and messing up the results)
-- also queries the user is the track should be reset (i.e: stop all trains, set up track to have single large outer-loop)
-- data is dumped to screen as JSON
-- use terminal's logging functionality to dump data to file
-- scp data to student environment
-- requires a little bit of manual cleanup, to get rid of stray redboot messages, and debug lines (prepended with //)
-- performed two different measurement types: (each of us discusses the test program we wrote)
-    - steady-state speed - all trains, all speeds from 14 - 5
-        - improve repeatability by "calibrating" the train between runs
-        - i.e: once data is collected, bring the train up to speed 14, wait for it to hit a specific sensor, send stop command
-        - results in train starting each test from the same point
-        - for each speed:
-            - send the speed command
-            - busy-poll sensors, recording a line with format:
-                - `R"({"event":"sensor","speed":%hhu,"sensor":"%c%hhu","time":%lu},)`
-            - run train for 13 seconds
-            - once 13 seconds are up, wait for the train to hit at least one more sensor
-                - useful for lower-speeds, to ensure we get additional data points
-    - stopping distance
-        - TODO: jams
+The `measure` target encapsulates all the various tests we run (such as stopping distance, steady-state velocity measurements, etc...), and provides some basic test-agnostic initialization code:
+
+## Initialization
+
+Upon launching `measure`, the program will ask the user which train they will be testing, and a "start speed" to perform automated tests from. This is useful, as the automated tests can occasionally fail mid-way through the test (e.g: lower speeds might stall the train), and need to be restarted from a set speed.
+
+Additionally, the program asks the user if the track should be reset (i.e: stop all trains, and make a large outer loop), as back-to-back tests might not require resetting the track. The `measure` program does _not_ use the CTS flag, and resetting the track can be quite slow.
+
+`measure` uses Timer 3 running at 508khz for measurements. It does _not_ need to manually reset the timer, as our kernel is responsible for setting up timer 3.
+
+## Logging and Exfiltration
+
+Our tests dump measurements to the screen as JSON, with debug lines prepended with a `//` for easy filtering.
+
+We opted to use gtkterm's built-in "save-to-log" functionality to save UART2 output to a file. While this did result in some stray redboot output being saved to our logs, it isn't too difficult to filter out these lines manually.
+
+To get the logs off the train PCs, we simply SCP'd the raw log files to our home directories on the UW CS servers. After a bit of manual cleanup, we were left with some pristine JSON files that contained all the juicy measurement data that we collected.
+
+## Tests
+
+We developed two different test routines to collect information about the trains: a steady-state velocity test, and a stopping distance test.
+
+By the T1 submission deadline, we were able to collect the following data sets:
+- Steady-State Velocity for **speeds 5 through 14** for **all** trains
+- Stopping Distance measurements for **speeds 8 and 14** for **all** trains
+
+### Steady-State Velocity
+
+This test measures the average steady-state velocity of each train at the given speed settings.
+
+The test methodology is as follows:
+
+1. Set the train going at the desired speed
+2. Busy-poll for sensor updates, logging a line with the sensor + timestamp when a sensor is triggered
+    - Line has the format of `R"({"event":"sensor","speed":%hhu,"sensor":"%c%hhu","time":%lu},)"`
+
+3. After \~13 seconds (a fairly arbitrary amount), wait until one-last sensor is triggered
+4. Bring the train up to speed 14, and wait for it to hit a particular sensor on the outer loop
+5. Send the stop command to halt the train
+
+Steps 4 and 5 are useful to automatically bring the train back to a specific known location on the train set. In fact, the first run of the steady-state velocity test doesn't actually record any data, and is solely performed to "calibrate" the train to an expected state!
+
+### Stopping Distance
+
+<!-- TODO: jams -->
 
 - mention that we didn't collect stop distance for each speed
 
 # Train Measurement - Analysis and Integration
 
-- TODO: jams
+<!-- TODO: jams -->
 
 # Future Work
 
