stopping distance; analysis+integration

--- a/docs/t1/t1.md
+++ b/docs/t1/t1.md
@@ -59,6 +59,7 @@ Command                           | Description
 ----------------------------------|--------------------------------------------------------------
 `addtr <train>`                   | Registers a train with the track
 `route <train> <sensor> <offset>` | Routes a train to the specified sensor + offset
+`mkloop`                          | Resets the track's branches to have a loop
 `q`                               | Quits the program and return back to RedBoot
 `tr <train> <train>`              | Sets the speed of a given train (from 1 - 14, with 0 to stop)
 
@@ -240,13 +241,55 @@ Steps 4 and 5 are useful to automatically bring the train back to a specific kno
 
 ### Stopping Distance
 
-<!-- TODO: jams -->
+This test measures the distance a train covers when it is stopped. The test
+gets the train up to a steady state-state speed, and then waits for a specific
+sensor to be hit. As soon as the sensor is observed, a `speed=0` command is
+sent, and the train comes to a stop. At this point the train's stopping
+distance can be measured.
 
-- mention that we didn't collect stop distance for each speed
+An additional mechanism allows "stopping time" to be measured. The program
+records the time when the stop command is sent, and then waits for any key to
+be pressed by the user. When the user presses a key, the time is recorded and
+added to the outputted measurements. This way, is the user is attentive, they
+can press a key as soon as they see the train reach a stop, giving a decent
+measurement for stopping time.
+
+We measured stopping distance for every train at speeds 14 and 8.
 
 # Train Measurement - Analysis and Integration
 
-<!-- TODO: jams -->
+We wrote a python script (the aptly named `process.py`) to process the raw
+measurement data and emit calibration data. The script parses the two
+measurement files for each train, and turns the raw data into expected
+velocities and stopping distances.
+
+For velocity, the distances between each successive sensor is combined with the
+time difference to produce a bunch of average velocities. We found that aside
+from the first few data points (when a train is accelerating), we observed
+pretty consistent measurements. So for each train, at each speed level, the
+expected velocity is the median velocity observed during the measurements.
+
+Stopping distance uses the mean of the measurements for each train/speed
+combination. We found stopping distances at speed 14 to be highly variable, but
+at speed 8 to be quite reliable. Both are included in the generated calibration
+code, but we only rely on the speed 8 stopping distance when trying to
+accurately stop a train.
+
+The python scripts emits `src/raw_calibration/calibration.c` and an associated
+header file. This is then loaded by `src/assignments/t1/calibration.cc` where
+it the raw data is exposed through a friendly interface:
+
+```cpp
+namespace Calibration {
+int /* mm/s */ expected_velocity(uint8_t train, uint8_t speed);
+int /* mm */ stopping_distance(uint8_t train, uint8_t speed);
+int /* ticks */ stopping_time(uint8_t train, uint8_t speed);
+int /* ticks */ acceleration_time(uint8_t train,
+                                  int current_velocity,
+                                  uint8_t target_speed);
+}  // namespace Calibration
+```
+
 
 # Future Work
 
